# slippers

./: LICENSE  README.md  pyproject.toml  slippers.py  tests.py
.github/workflows/: tests.yml
