[tool.poetry]
name = "slippers-proxy"
version = "0.1.1"
description = ""
authors = ["Ryan Siemens <ryanjsiemens@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "slippers.py" },
]

[projects.urls]
repository = "https://github.com/rsiemens/slippers"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.14.0"
pudb = "^2025.1.1"

[tool.ruff.lint]
select = ["PL", "I"]
ignore = ["PLR0913"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
